{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 174,
  "lineage": "2c854534-2f56-aaab-4645-0f0548dcc4c8",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:189613975676:subnet/subnet-858b9ded",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "id": "subnet-858b9ded",
            "map_public_ip_on_launch": true,
            "owner_id": "189613975676",
            "state": "available",
            "vpc_id": "vpc-3f6a8454"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:189613975676:subnet/subnet-132b6469",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "id": "subnet-132b6469",
            "map_public_ip_on_launch": true,
            "owner_id": "189613975676",
            "state": "available",
            "vpc_id": "vpc-3f6a8454"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:189613975676:subnet/subnet-cb9b2c87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "id": "subnet-cb9b2c87",
            "map_public_ip_on_launch": true,
            "owner_id": "189613975676",
            "state": "available",
            "vpc_id": "vpc-3f6a8454"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:189613975676:vpc/vpc-3f6a8454",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-4976a322",
            "default_route_table_id": "rtb-b9b701d2",
            "default_security_group_id": "sg-40d42023",
            "dhcp_options_id": "dopt-90c201fb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-3f6a8454",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-b9b701d2",
            "owner_id": "189613975676"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c1fa8df71875112",
            "arn": "arn:aws:ec2:us-east-2:189613975676:instance/i-04be11488b8a6e108",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "demo-host",
            "id": "i-04be11488b8a6e108",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "demo-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-057b68f1a836d9b6f",
            "private_dns": "ip-172-31-8-10.us-east-2.compute.internal",
            "private_ip": "172.31.8.10",
            "public_dns": "ec2-18-216-137-251.us-east-2.compute.amazonaws.com",
            "public_ip": "18.216.137.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-01cd3cea3937bc9af",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "demo-common",
              "demo-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-858b9ded",
            "tags": {
              "Name": "demo-control_plane-1",
              "kubernetes.io/cluster/demo": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02371f0dee42bea60",
              "sg-04e55e71aadb401dd"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c1fa8df71875112",
            "arn": "arn:aws:ec2:us-east-2:189613975676:instance/i-027e366ad9158ed79",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "demo-host",
            "id": "i-027e366ad9158ed79",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "demo-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-088af71fdde268d70",
            "private_dns": "ip-172-31-24-7.us-east-2.compute.internal",
            "private_ip": "172.31.24.7",
            "public_dns": "ec2-18-216-89-172.us-east-2.compute.amazonaws.com",
            "public_ip": "18.216.89.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-03d5f9f1047fc39d4",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "demo-common",
              "demo-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-132b6469",
            "tags": {
              "Name": "demo-control_plane-2",
              "kubernetes.io/cluster/demo": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02371f0dee42bea60",
              "sg-04e55e71aadb401dd"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c1fa8df71875112",
            "arn": "arn:aws:ec2:us-east-2:189613975676:instance/i-079af17bd75d4e8f6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "demo-host",
            "id": "i-079af17bd75d4e8f6",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "demo-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0601a872f516bc06a",
            "private_dns": "ip-172-31-42-179.us-east-2.compute.internal",
            "private_ip": "172.31.42.179",
            "public_dns": "ec2-18-224-213-234.us-east-2.compute.amazonaws.com",
            "public_ip": "18.224.213.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0cce214319074c429",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "demo-common",
              "demo-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-cb9b2c87",
            "tags": {
              "Name": "demo-control_plane-3",
              "kubernetes.io/cluster/demo": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02371f0dee42bea60",
              "sg-04e55e71aadb401dd"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:189613975676:loadbalancer/net/demo-api-lb/8d1a930d28c8861b",
            "arn_suffix": "net/demo-api-lb/8d1a930d28c8861b",
            "dns_name": "demo-api-lb-8d1a930d28c8861b.elb.us-east-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:189613975676:loadbalancer/net/demo-api-lb/8d1a930d28c8861b",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "demo-api-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-132b6469"
              },
              {
                "subnet_id": "subnet-858b9ded"
              },
              {
                "subnet_id": "subnet-cb9b2c87"
              }
            ],
            "subnets": [
              "subnet-132b6469",
              "subnet-858b9ded",
              "subnet-cb9b2c87"
            ],
            "tags": {
              "Cluster": "demo",
              "kubernetes.io/cluster/demo": "shared"
            },
            "vpc_id": "vpc-3f6a8454",
            "zone_id": "ZLMOA37VPKANP"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:189613975676:listener/net/demo-api-lb/8d1a930d28c8861b/2f47fd8f537de70e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:189613975676:targetgroup/demo-api/f538ff5b64fdb948",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:189613975676:listener/net/demo-api-lb/8d1a930d28c8861b/2f47fd8f537de70e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:189613975676:loadbalancer/net/demo-api-lb/8d1a930d28c8861b",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:189613975676:targetgroup/demo-api/f538ff5b64fdb948",
            "arn_suffix": "targetgroup/demo-api/f538ff5b64fdb948",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:189613975676:targetgroup/demo-api/f538ff5b64fdb948",
            "lambda_multi_value_headers_enabled": false,
            "name": "demo-api",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "target_type": "instance",
            "vpc_id": "vpc-3f6a8454"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "control_plane_api",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:189613975676:targetgroup/demo-api/f538ff5b64fdb948-20190813184806272200000002",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:189613975676:targetgroup/demo-api/f538ff5b64fdb948",
            "target_id": "i-04be11488b8a6e108"
          },
          "depends_on": [
            "aws_instance.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:189613975676:targetgroup/demo-api/f538ff5b64fdb948-20190813184806205900000001",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:189613975676:targetgroup/demo-api/f538ff5b64fdb948",
            "target_id": "i-027e366ad9158ed79"
          },
          "depends_on": [
            "aws_instance.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:189613975676:targetgroup/demo-api/f538ff5b64fdb948-20190813184806482600000003",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:189613975676:targetgroup/demo-api/f538ff5b64fdb948",
            "target_id": "i-079af17bd75d4e8f6"
          },
          "depends_on": [
            "aws_instance.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:189613975676:security-group/sg-02371f0dee42bea60",
            "description": "cluster common rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02371f0dee42bea60",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "demo-common",
            "name_prefix": null,
            "owner_id": "189613975676",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/demo": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-3f6a8454"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:189613975676:security-group/sg-04e55e71aadb401dd",
            "description": "cluster control_planes",
            "egress": [],
            "id": "sg-04e55e71aadb401dd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "demo-control_planes",
            "name_prefix": null,
            "owner_id": "189613975676",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/demo": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-3f6a8454"
          }
        }
      ]
    }
  ]
}